--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "nestjs-redis": "^1.3.3",
     "redis": "^4.6.7",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.4.3",
