--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@nestjs/platform-express": "^9.4.3",
     "@nestjs/platform-socket.io": "^9.4.3",
     "@nestjs/websockets": "^9.4.3",
+    "@types/redlock": "^4.0.4",
     "@types/socket.io": "^3.0.2",
     "ioredis": "^5.3.2",
     "nestjs-redis": "^1.3.3",
     "redis": "^4.6.7",
+    "redlock": "^5.0.0-beta.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.0"
