--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "redlock": "^5.0.0-beta.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "socket.io-client": "^4.7.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
