Adjusted docker-compose to test local changes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,19 @@
-version: '3.8'
+version: '3.9'
 
 services:
+  collaboration-service-js:
+    image: collab-service-js-local
+    ports:
+      - 4444:4444
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+
   redis:
     image: redis:7.2.2
-    container_name: redis_dev
     ports:
       - '6379:6379'
+
+networks:
+  default:
+    name: explorviz
