--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ default:
     paths:
       - .npm/
   before_script:
-    - npm ci --cache .npm --prefer-offline
+    - which npm && npm ci --cache .npm --prefer-offline
 
 workflow:
   rules:
