--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,6 +69,7 @@ deploy-dockerhub-amd64:
     DOCKERHUB_TAG: 'amd64'
   rules:
     - if: '$CI_PIPELINE_SOURCE == "push" && $CI_PIPELINE_SOURCE != "schedule" && $CI_COMMIT_BRANCH == "main"'
+    - if: '$CI_PIPELINE_SOURCE == "pipeline"'
 
 deploy-dockerhub-arm64:
   extends:
@@ -86,6 +87,7 @@ retag-amd64-as-latest::
     - if: $MULTI_ARCH_BUILD
       when: never
     - if: '$CI_PIPELINE_SOURCE == "push" && $CI_PIPELINE_SOURCE != "schedule" && $CI_COMMIT_BRANCH == "main"'
+    - if: '$CI_PIPELINE_SOURCE == "pipeline"'
   variables:
     SOURCE_TAG: "amd64"
     TARGET_TAG: "latest"
