Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,7 +62,7 @@ test:
     - echo "{\"auths\":{\"$CONTAINER_REGISTRY_URL\":{\"auth\":\"$(echo -n ${DOCKERHUB_USERNAME}:${DOCKERHUB_PASSWORD} | base64)\"}}}" > /kaniko/.docker/config.json
     - /kaniko/executor --context=$CI_PROJECT_DIR --dockerfile=$CI_PROJECT_DIR/Dockerfile --destination=$DOCKERHUB_ORGANIZATION/$DOCKERHUB_IMAGE_NAME:$DOCKERHUB_TAG
 
-deploy-dockerhub-amd64:
+deploy-main-amd64:
   extends:
     - .deploy-to-dockerhub
   variables:
@@ -71,7 +71,7 @@ deploy-dockerhub-amd64:
     - if: '$CI_PIPELINE_SOURCE == "push" && $CI_PIPELINE_SOURCE != "schedule" && $CI_COMMIT_BRANCH == "main"'
     - if: '$CI_PIPELINE_SOURCE == "pipeline"'
 
-deploy-dockerhub-arm64:
+deploy-main-arm64:
   extends:
     - .deploy-to-dockerhub
   tags:
@@ -92,7 +92,13 @@ retag-amd64-as-latest::
     SOURCE_TAG: "amd64"
     TARGET_TAG: "latest"
 
+deploy-mr:
+  variables:
+    DOCKERHUB_TAG: mr-$CI_MERGE_REQUEST_IID
+  extends:
+    - .deploy-to-dockerhub
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event" && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "main"'
 
 publish-multi-arch-manifest:
   extends: .retag-as-multi-arch-dockerhub-image
-
