--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test:supertest": "jest --config ./jest.supertest.js"
+    "test:supertest": "jest --config ./jest.supertest.ts"
   },
   "dependencies": {
     "@liaoliaots/nestjs-redis": "^9.0.5",
