--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -39,7 +39,7 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build]
 
     steps:
       - name: Checkout repository
@@ -73,7 +73,7 @@ jobs:
 
   build-and-deploy:
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [test]
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
       - name: Checkout repository
@@ -95,4 +95,5 @@ jobs:
           docker buildx build \
             --platform linux/amd64,linux/arm64 \
             --tag ${{ vars.DOCKER_IMAGE_NAME }}:latest . \
+            --tag explorviz/collaboraton-service:latest . \
             --push
