--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -94,6 +94,5 @@ jobs:
         run: |
           docker buildx build \
             --platform linux/amd64,linux/arm64 \
-            --tag ${{ vars.DOCKER_IMAGE_NAME }}:latest . \
-            --tag explorviz/collaboraton-service:latest . \
+            --tag ${{ vars.DOCKER_IMAGE_NAME }}:latest --tag explorviz/collaboraton-service:latest . \
             --push
